# C-Review

./: CMakeLists.txt  README.md
include/: bit_field.h  cmake_practice.h  function_pointer.h  pointers.h  print_manager.h
src/: bit_field.c  cmake_practice.c  function_pointer.c  main.c  pointers.c  print_manager.c
